Add the first set of display items and made the navbar

--- a/index.html
+++ b/index.html
@@ -1,25 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Razor United States | For Gamers.By Gamers.</title>
-<body>
-    <nav class="navbar">
-        <ul class="nav-ul">
-            <li class="nav-li"></li>
-            <li class="nav-li"></li>
-            <li class="nav-li"></li>
-            <li class="nav-li"></li>
-            <li class="nav-li"></li>
-            <li class="nav-li"></li>
-            <li class="nav-li"></li>
-            <li class="nav-li"></li>
-            <li class="nav-li"></li>
-            <li class="nav-li"></li>
-        </ul>
-    </nav>
-</body>
-</html>
+  <title>Razor United Kingdom | For Gamers. By Gamers.</title>
+  <link rel="icon" href="Assets/razer_logo.png">
+  <link rel="stylesheet" href="css/index.css">
 
+<body>
+  <nav class="navbar">
+    <ul class="nav-ul">
+      <li>
+        <a href="/"><img class="logo" src="Assets/razer_logo.png"></a>
+      </li>
+      <li class="nav-li">
+        <a href="#">Store</a>
+      </li>
+      <li class="nav-li">
+        <a href="#">PC</a>
+      </li>
+      <li class="nav-li">
+        <a href="#">Console</a>
+      </li>
+      <li class="nav-li">
+        <a href="#">Mobile</a>
+      </li>
+      <li class="nav-li">
+        <a href="#">Lifestyle</a>
+      </li>
+      <li class="nav-li">
+        <a href="#">Services</a>
+      </li>
+      <li class="nav-li">
+        <a href="#">Community</a>
+      </li>
+      <li class="nav-li">
+        <a href="#">Support</a>
+      </li>
+      <li class="nav-li">
+        <a href="#"><img class='search-icon' src="Assets/search_icon.svg"></a>
+      </li>
+      <li class="nav-li">
+        <a href="#"><img src="Assets/cart_icon.svg" alt="Cart Icon" class="cart-icon"></a>
+      </li>
+    </ul>
+  </nav>
+  <section class="message-section">
+    <span class="message">Unleash a new age of technology with an arsenal of cutting-edge innovations that will keep you
+      ahead of the game. <a href="#" class="shop-now">Shop Now ></a></span>
+  </section>
+  <section class="display_items" id="display_items" >
+  </section>
+</body>
+<script src="js/index.js"></script>
+
+</html>
