Added secondary item list and made responsive

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Razor United Kingdom | For Gamers. By Gamers.</title>
-  <link rel="icon" href="Assets/razer_logo.png">
+  <title>Razer United Kingdom | For Gamers. By Gamers.</title>
+  <link rel="icon" href="Assets/backgrounds/razer_logo.png">
   <link rel="stylesheet" href="css/index.css">
 
 <body>
   <nav class="navbar">
+    <div class="navbar-div">
     <ul class="nav-ul">
-      <li>
-        <a href="/"><img class="logo" src="Assets/razer_logo.png"></a>
+      <li class="logo-li">
+        <a href="/"><img class="logo" src="Assets/backgrounds/razer_logo.png"></a>
       </li>
       <li class="nav-li">
         <a href="#">Store</a>
@@ -40,20 +41,35 @@
         <a href="#">Support</a>
       </li>
       <li class="nav-li">
-        <a href="#"><img class='search-icon' src="Assets/search_icon.svg"></a>
+        <a href="#"><img class='search-icon' src="Assets/icons/search_icon.svg"></a>
       </li>
-      <li class="nav-li">
-        <a href="#"><img src="Assets/cart_icon.svg" alt="Cart Icon" class="cart-icon"></a>
+      <li class="nav-li cart-li">
+        <a href="#"><img src="Assets/icons/cart_icon.svg" alt="Cart Icon" class="cart-icon"></a>
       </li>
     </ul>
+    </div>
   </nav>
+  
   <section class="message-section">
-    <span class="message">Unleash a new age of technology with an arsenal of cutting-edge innovations that will keep you
-      ahead of the game. <a href="#" class="shop-now">Shop Now ></a></span>
+    <span class="message">All orders over £79 will enjoy free standard shipping to United Kingdom.
   </section>
-  <section class="display_items" id="display_items" >
+  
+  <section class="main_display_items" id="main_display_items">
   </section>
+  
+  <section class="side_display_items" id="side_display_items">
+  </section>
+
+  <footer class="footer">
+     <span class="footer-span">
+      This webpage is a clone of the website <a href="https:razer.com/gb-en" class="links" target="_blank">"razer.com"</a> by <a
+        href="https://github.com/Paramayu/Razer" class="links" target="_blank">Paramayu</a> performed in 2023
+      for learning purpose.
+    </span>
+  </footer>
+  
 </body>
+  
 <script src="js/index.js"></script>
 
 </html>
